<resources>
    <string name="app_name">BalaFood</string>
    <string name="welcome_screen">Một ngày vui vẻ nhé!</string>
    <string name="go_market">Đi chợ</string>
    <string name="history">Lịch sử</string>
    <string name="help">Trợ giúp tôi</string>
    <string name="donate">Ủng hộ Lập trình viên nghèo đói</string>
    <string name="quit">Thoát ứng dụng</string>

    <string name="food_suggest_banner">Danh sách thực phẩm cho 1 người trong 1 ngày</string>
    <string name="re_roll">Re-roll</string>
    <string name="okey">Chốt</string>

    <string name="market_banner">Danh sách đi chợ</string>
    <string name="done_market">Đi chợ xong</string>

    <string name="history_banner">Trung bình dinh dưỡng hàng ngày của bạn</string>
    <string name="show_off">Khoe</string>
    <string name="back">Quay lại</string>

    <string name="facebook">Facebook</string>
    <string name="zalo">Zalo</string>
    <string name="email">Emaii</string>
    <string name="message">Tin nhắn điện thoại</string>

    <string name="donate_ad">Ủng hộ xem quảng cáo</string>
    <string name="donate_lelvel1">Ủng hộ 1 ngàn đồng</string>
    <string name="donate_level2">Ủng hộ 11 ngàn đồng</string>
    <string name="donate_level3">Ủng hộ 111 ngàn đồng</string>
    <string name="donate_level4">Ủng hộ 111.111 ngàn đồng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
