<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_suggest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.suggest.FoodSuggestActivity">

    <TextView
        android:id="@+id/txt_fsBanner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:text="@string/food_suggest_banner"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/food_suggest_banner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyV_FoodList"
        android:layout_width="357dp"
        android:layout_height="369dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fsBanner" />

    <Button
        android:id="@+id/btn_reroll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/re_roll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyV_FoodList"
        tools:text="@string/re_roll" />

    <Button
        android:id="@+id/btn_okey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/okey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_reroll"
        app:layout_constraintTop_toBottomOf="@+id/recyV_FoodList"
        tools:text="@string/okey" />

    <fragment
        android:id="@+id/fgm_nutritionChart"
        android:name="com.example.balafood.ui.suggest.NutritionChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reroll" />
</androidx.constraintlayout.widget.ConstraintLayout>